--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 .top{
-    background-image: url('./images/background-1.jpeg');
+    background-image: url("./images/background-1.jpeg");
     background-size: auto;
     min-height: 75%;
     background-attachment: fixed;
